[package]
name = "pallet-price-oracle"
description = ""
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
scale-info = { workspace = true }
sp-offchain = { workspace = true }
sp-io = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
array-bytes = { workspace = true }

[features]
default = [ "std" ]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-offchain/std",
    "sp-io/std", 
    "serde/std",
    "log/std",
    "sp-std/std",
    "scale-info/std",
    "sp-core/std",
]
