[package]
name = "pallet-price-oracle"
description = "A decentralized price oracle for fetching cryptocurrency prices from multiple DEXs"
version = "0.1.0"
license = "Unlicense"
edition = "2021"
publish = false

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-offchain = { workspace = true }
sp-io = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
log = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
array-bytes = { workspace = true }

[features]
default = [ "std" ]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-offchain/std",
    "sp-io/std", 
    "serde/std",
    "log/std",
    "sp-std/std",
    "scale-info/std",
    "sp-core/std",
]
